  have no way of knowing if Python is multi-threaded yet).

- Typing Ctrl-C whilst raw_input() was waiting in a build with threads
  disabled caused a crash.

- Bug #1165306: instancemethod_new allowed the creation of a method
  with im_class == im_self == NULL, which caused a crash when called.

Extension Modules
-----------------

- Bug #1215928: Fix bz2.BZ2File.seek() for 64-bit file offsets.

- Bug #1191043: Fix bz2.BZ2File.(x)readlines() for files containing one line
  without newlines.

- Bug #728515: mmap.resize() now resizes the file on Unix as it did
  on Windows.

- Bug #1234979: For the argument of thread.Lock.acquire, the Windows 
  implemented treated all integer values except 1 as false.

- Bug #1194181: bz2.BZ2File didn't handle mode 'U' correctly.

- Bug #1166660: The readline module could segfault if hook functions
  were set in a different thread than that which called readline.

- weakref proxy has incorrect __nonzero__ behavior.  SF bug #1770766.

Library
-------

- Bug #1163178: Make IDNA return an empty string when the input is empty.

- Bug #1121494: distutils.dir_utils.mkpath now accepts Unicode strings.

- Bug #1178484: Return complete lines from codec stream readers
  even if there is an exception in later lines, resulting in
  correct line numbers for decoding errors in source code. 

- Bug #1266283: "lexists" is now in os.path.__all__.

- The sets module can now properly compute s-=s and s^=s as an empty set.

- Bug #1192315: Disallow negative arguments to clear() in pdb.

- Patch #827386: Support absolute source paths in msvccompiler.py.

- Fix a problem in Tkinter introduced by SF patch #869468: delete bogus
  __hasattr__ and __delattr__ methods on class Tk that were breaking
  Tkdnd.

- Bug #1015140: disambiguated the term "article id" in nntplib docs and
  docstrings to either "article number" or "message id".

- Bug #1177468: Don't cache the /dev/urandom file descriptor for os.urandom,